# lv2dynparam

./: .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  README  aminclude.am  audiolock.c  audiolock.h  bootstrap  configure.ac  doxygen.cfg  doxygen.mk  helpers.c  helpers.h  hint_set.c  hint_set.h  log.c  log.h  lv2_rtmempool.h  lv2dynparam.h  lv2dynparamhost-1.pc.in  lv2dynparamhost1.pc.in  lv2dynparamplugin-1.pc.in  lv2dynparamplugin1.pc.in  memory_atomic.c  memory_atomic.h  types.h
host/: Makefile.am  dynparam.c  dynparam.h  dynparam_host_callbacks.c  dynparam_internal.h  dynparam_preallocate.c  dynparam_preallocate.h  host.c  host.h  host_callbacks.c  host_callbacks.h  internal.h
plugin/: Makefile.am  dynparam.c  dynparam.h  dynparam_group.c  dynparam_internal.h  dynparam_parameter.c  group.c  internal.h  parameter.c  plugin.c  plugin.h
